processed/jira/txt/LU/LU-17438.txt
Key:        LU-17438
Summary:    Fix the compilation of wirecheck
Link:       https://jira.whamcloud.com/browse/LU-17438
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Etienne Aujames
Reporter:   Etienne Aujames
Created:    Wed, 17 Jan 2024 15:46:24 +0000
Updated:    Thu, 15 Feb 2024 14:45:11 +0000
Resolved:   Thu, 15 Feb 2024 14:45:11 +0000

--- Description ---
wirecheck no longer builds:

eaujames@dev:~/lustre-release/lustre/utils$ make wirecheck                                                                                                                                             [498/498]
gcc -DHAVE_CONFIG_H -I. -I../..  -DCC="\"gcc\"" -include /home/eaujames/lustre-release/undef.h -include /home/eaujames/lustre-release/config.h -I/home/eaujames/lustre-release/lnet/include/uapi -I/home/eaujames/l
ustre-release/lustre/include/uapi -I/home/eaujames/lustre-release/libcfs/include -I/home/eaujames/lustre-release/lnet/utils/ -I/home/eaujames/lustre-release/lustre/include  -fPIC -D_GNU_SOURCE -D_LARGEFILE64_SOU
RCE=1 -D_FILE_OFFSET_BITS=64 -DLUSTRE_UTILS=1  -g -O2 -Wall -Werror  -MT wirecheck-wirecheck.o -MD -MP -MF .deps/wirecheck-wirecheck.Tpo -c -o wirecheck-wirecheck.o `test -f 'wirecheck.c' || echo './'`wirecheck.
c
wirecheck.c: In function ‘check_lov_foreign_md’:
wirecheck.c:881:16: error: ‘LU_FOREIGN_TYPE_DAOS’ undeclared (first use in this function)
  CHECK_VALUE_X(LU_FOREIGN_TYPE_DAOS);
                ^
wirecheck.c:104:36: note: in definition of macro ‘CHECK_VALUE_X’
   " (unsigned)"#a");\n", (unsigned)a); \
                                    ^
wirecheck.c:881:16: note: each undeclared identifier is reported only once for each function it appears in
  CHECK_VALUE_X(LU_FOREIGN_TYPE_DAOS);
                ^
wirecheck.c:104:36: note: in definition of macro ‘CHECK_VALUE_X’
   " (unsigned)"#a");\n", (unsigned)a); \
                                    ^
wirecheck.c: In function ‘check_lov_hsm_base’:
wirecheck.c:891:2: error: implicit declaration of function ‘BLANK_LINKE’ [-Werror=implicit-function-declaration]
  BLANK_LINKE();
  ^
wirecheck.c: In function ‘check_rsi_downcall_data’:
wirecheck.c:169:27: error: invalid application of ‘sizeof’ to incomplete type ‘struct rsi_downcall_data’
   CHECK_VALUE((int)sizeof(struct s));  \
....

--- Comment (pjones, Thu, 15 Feb 2024 14:45:11 +0000) ---
Landed for 2.16

--- Comment (gerrit, Thu, 15 Feb 2024 07:09:45 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/53716/

Subject: LU-17438 utils: fix build for wirecheck

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 08ca34141c4cd68ddce58eb11776c24cdc74a2dd

--- Comment (gerrit, Wed, 17 Jan 2024 17:10:57 +0000) ---
"Etienne AUJAMES " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/53716

Subject: LU-17438 utils: fix build for wirecheck

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: be6db26a83b4f6f269797dafff6a2ad91d461ab2

--- Comment (eaujames, Wed, 17 Jan 2024 15:51:13 +0000) ---
I think wirecheck should be built along with all the utils. That way, developers will see if they break something in wirecheck code.
